feat: add manual marriage predictive formula
